--- a/public/assets/css/picoreflow.css
+++ b/public/assets/css/picoreflow.css
@@ -119,11 +119,13 @@ body {
     color: #1F1E1A;
     text-shadow: 0 0 5px #000, 0 0 5px #000;
     border-left: 1px solid #b9b6af;
+    padding-left: 3px;
+    padding-right: 2px;
     height: 40px;
-    width: 42px;
-    display: inline-block;
+    #width: 43px;
+    display: inline-grid;
+    background-clip: border-box;
 }
-
 
 .ds-led-hazard-active {
     color: rgb(255, 204, 0);
@@ -175,6 +177,16 @@ body {
     background: radial-gradient(ellipse at center, rgba(221,221,221,1) 0%,rgba(221,221,221,0.26) 100%); /* W3C */
 }
 
+.ds-led-lagging-active {
+    color: rgb(255, 204, 0);
+    background: -moz-radial-gradient(center, ellipse cover, rgba(242,195,67,1) 0%, rgba(241,218,54,0.26) 100%); /* FF3.6+ */
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(242,195,67,1)), color-stop(100%,rgba(241,218,54,0.26))); /* Chrome,Safari4+ */
+    background: -webkit-radial-gradient(center, ellipse cover, rgba(242,195,67,1) 0%,rgba(241,218,54,0.26) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-radial-gradient(center, ellipse cover, rgba(242,195,67,1) 0%,rgba(241,218,54,0.26) 100%); /* Opera 12+ */
+    background: -ms-radial-gradient(center, ellipse cover, rgba(242,195,67,1) 0%,rgba(241,218,54,0.26) 100%); /* IE10+ */
+    background: radial-gradient(ellipse at center, rgba(242,195,67,1) 0%,rgba(241,218,54,0.26) 100%); /* W3C */
+}
+
 .ds-trend {
     top: 0;
     text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.25), -1px -1px 0 rgba(0, 0, 0, 0.4);
@@ -190,15 +202,7 @@ body {
     border: none;
     width: initial;
     text-align: center;
-    width: 168px;
-    padding: 0;
-}
-
-.ds-state {
-    border: none;
-    width: initial;
-    text-align: center;
-    width: 210px;
+    width: 302px;
     padding: 0;
 }
 
